# check-config

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hook.yaml  ;  CHANGES.md  Cargo.toml  LICENSE  README.md  installed.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.zellij/: env  layout.kdl
checkers/: flake8.toml  python.toml
docs/: alternatives.md  checkers.md  examples.md  features.md  glossary.md  index.md  installation.md  requirements.txt  support.md  usage.md
example/: check-config-for-usage-doc.toml  pyproject.toml  test.sh  test_via_pyproject.sh
example/checkers/: check-config.toml  check_config.toml  checkers.toml  copy.toml  http_check_config.toml  http_check_config_relative.toml  http_checkers.toml  http_checkers_relative.toml  lines_present.txt  template.txt  unpack.toml  vars.toml
example/checkers/folder/: local_file.toml  relative_local_file.toml
example/expected_output/: .bashrc  filled_template.txt  lines_present.txt  test.json  test.toml  test.yaml
example/input/: .bashrc  test.json  test.toml  test.yaml
example/output/: test.yaml
example_checkers/: bash.toml  black.toml  mypy.toml  python.toml  ruff.toml  ruff_.toml
output/: .bashrc  .gitconfig  test.json  test.toml
scripts/: mkdocs.sh
src/: cli.rs  integration_test.rs  lib.rs  main.rs  uri.rs
src/checkers/: base.rs  entry_absent.rs  entry_present.rs  entry_regex_match.rs  file_absent.rs  file_present.rs  file_regex.rs  key_absent.rs  key_value_present.rs  key_value_regex_match.rs  lines_absent.rs  lines_present.rs  mod.rs  test_helpers.rs  toml.rs  utils.rs
src/checkers/file/: dir_absent.rs  dir_copied.rs  dir_present.rs  entry_absent.rs  entry_present.rs  file_absent.rs  file_copied.rs  file_present.rs  file_unpacked.rs  git_fetch.rs  key_absent.rs  key_value_present.rs  key_value_regex_match.rs  lines_absent.rs  lines_present.rs  mod.rs
src/checkers/git/: mod.rs
src/checkers/package/: command.rs  custom.rs  mod.rs  package_absent.rs  package_present.rs  python.rs  rust.rs
src/file_types/: generic.rs  ini.rs  json.rs  kdl.rs  mod.rs  toml.rs  yaml.rs
src/mapping/: generic.rs  json.rs  kdl.rs  mod.rs  toml.rs  yaml.rs
styles/: flake8.toml  python.toml
test/: Cargo.toml  present.toml  present1.toml
tests/: integration_test.rs
tests/resources/checkers/entry_absent/1/: check-config.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.toml  input.yaml
tests/resources/checkers/entry_absent/2/: checker.toml  expected_output.json  expected_output.toml  expected_output.yaml
tests/resources/checkers/entry_present/1/: checker.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.json  input.yaml
tests/resources/checkers/entry_present/2/: checker.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.json  input.toml  input.yaml
tests/resources/checkers/key_absent/1/: check-config.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.json  input.toml  input.yaml
tests/resources/checkers/key_value_present/1/: check-config.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.json  input.toml  input.yaml
tests/resources/checkers/key_value_present/2/: check-config.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.toml
tests/resources/checkers/key_value_regex_match/1/: input.json
tests/resources/checkers/key_value_regex_match/2/: check-config.toml
tests/resources/checkers/key_value_regex_matched/1/: check-config.toml  expected_output.json  expected_output.toml  expected_output.yaml  input.yaml
tests/resources/checkers/key_value_regex_matched/2/: expected_output.json  expected_output.toml  expected_output.yaml
