[package]
name = "check-config"
version = "0.8.6"
edition = "2024"
license = "MIT"
homepage = "https://pypi.org/project/check-config/"
documentation = "https://check-config.readthedocs.io"
repository = "https://github.com/mrijken/check-config"
keywords = ["automation", "configuration"]
authors = ["Marc Rijken <marc@rijken.org>"]
readme = "README.md"
description = "Check configuration files."

exclude = [".github/*", "videos/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "check-config"

[dependencies]
toml = { version = "0.9.5", default-features = false }
serde = { version = "1.0", default-features = false }
serde_yaml_ng = "0.10.0"
toml_edit = "0.23.3"
similar = "2.7.0"
log = "0.4.27"
clap = { version = "4.5.45", features = ["env"] }
regex = "1.11.1"
thiserror = { version = "2.0.15", default-features = false }
serde_json = "1.0.142"
tempfile = { version = "3.20.0", default-features = false }
clap-verbosity-flag = "3.0.3"
env_logger = { version = "0.11.8", default-features = false }
url = { version = "2.5.4", default-features = false }
reqwest = { version = "0.12.23", features = ["blocking", "default-tls"], default-features = false }
derive_more = { version = "2.0.1", features = ["display", "from"], default-features = false }
openssl = "0.10.73"
dir-diff = "0.3.3"
dircpy = { version = "0.3.19", default-features = false }
test-log = { version = "0.2.18", default-features = false }
dirs = "6.0.0"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1


[package.metadata.cargo-machete]
ignored = [
  "openssl",  # needed for https connections
]
