[package]
name = "check-config"
version = "0.9.10"
edition = "2024"
description = "Check configuration files."
documentation = "https://check-config.readthedocs.io"
readme = "README.md"
homepage = "https://pypi.org/project/check-config/"
repository = "https://github.com/mrijken/check-config"
license = "MIT"
keywords = ["automation", "configuration"]
exclude = [".github/*", "videos/*"]

[package.metadata.cargo-machete]
ignored = [
    "openssl", # needed for https connections
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "check-config"

[dependencies]
clap = { version = "4.5.45", features = ["env"] }
clap-verbosity-flag = "3.0.3"
derive_more = { version = "2.0.1", default-features = false, features = [
    "as_ref",
    "display",
    "from",
] }
dir-diff = "0.3.3"
dircpy = { version = "0.3.19", default-features = false }
dirs = "6.0.0"
env_logger = { version = "0.11.8", default-features = false }
flate2 = "1.1.2"
git2 = "0.20.2"
log = "0.4.27"
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "default-tls",
    "blocking",
] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0.142"
serde_yaml_ng = "0.10.0"
similar = "2.7.0"
tar = "0.4.44"
tempfile = { version = "3.20.0", default-features = false }
test-log = { version = "0.2.18", default-features = false }
thiserror = { version = "2.0.15", default-features = false }
toml = { version = "0.9.5", default-features = false }
toml_edit = "0.23.3"
url = { version = "2.5.4", default-features = false }
zip = "6.0.0"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
