[build-system]
requires = ["maturin>=1.0,<2.0"]

build-backend = "maturin"

[project]
name = "check-config"
version = "0.8.2"
description = "Check configuration files."
authors = [{ name = "Marc Rijken", email = "marc@rijken.org" }]
maintainers = [{ name = "Marc Rijken", email = "marc@rijken.org" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["automation", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
repository = "https://github.com/mrijken/check-config"
documentation = "https://check-config.readthedocs.io"

[tool.maturin]
bindings = "bin"
profile = "release"
manifest-path = "Cargo.toml"
module-name = "check-config"
strip = true

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "ANN102", # Missing type annotation for {name} in classmethod
    "ANN101", # Missing type annotation for `self` in method
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "TCH",    # Use Type Checking Block
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM",     # Error messages must not use string literal, must not use f-string
    "FBT",    # Do not use positional / default boolean arguments
]
